src/objects/Activity.object
<CustomObject>
    <fields>
        <fullName>Import2_Id__c</fullName>
        <description>Id of the record in original system, where it was imported from by Import2.com</description>
        <externalId>true</externalId>
        <label>Import2 Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Activity_SF_ID__c</fullName>
        <externalId>true</externalId>
        <label>Legacy Activity SF ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Legacy_Create_Date__c</fullName>
        <label>Legacy Create Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Owner_Name__c</fullName>
        <formula>Owner:User.FirstName + &quot; &quot; +  Owner:User.LastName</formula>
        <label>Owner Name</label>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>MyActivities</fullName>
        <columns>ACTIVITY_SUBTYPE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>EVENT.LOCATION</columns>
        <filterScope>Mine</filterScope>
        <label>My Activities</label>
    </listViews>
    <listViews>
        <fullName>MyDelegatedActivities</fullName>
        <filterScope>Delegated</filterScope>
        <label>My Delegated Activities</label>
    </listViews>
    <listViews>
        <fullName>MyTeamsActivities</fullName>
        <filterScope>Team</filterScope>
        <label>My Team&apos;s Activities</label>
    </listViews>
    <listViews>
        <fullName>TodaysTasks</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Today&apos;s Tasks</label>
    </listViews>
    <listViews>
        <fullName>UpcomingEvents</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Upcoming Events</label>
    </listViews>
    <sharingModel>Private</sharingModel>
</CustomObject>